[package]
name = "rustic_synth"
version = "0.1.0"
authors = ["Manuel Deval <manuel.deval@gmail.com>"]
edition = "2018"

[features]
oscilloscope = ["piston2d-graphics", "piston_window"]

[dependencies]
cpal = { version = "*" }
failure = "0.1.5"
rosc = "~0.1"
bus = "2.2.2"
rand = "0.7.2"

# Oscillo
piston2d-graphics = { version =  "0.35.0", optional = true }
piston_window = { version = "0.98.0" , optional = true }

# Fast channel
crossbeam = "0.7.2"

# Serialize (json/yaml)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

# Struct iter
strum = "0.16.0"
strum_macros = "0.16.0"

